# python-devcontainer

./: Makefile  README.md  bootstrap.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
project_name/: __init__.py
tests/: __init__.py  test_project_name.py
