[project]
name = "project_name"
version = "0.1.0"
description = "A Python Dev Container."
authors = [
    {name = "last_name, first_name", email = "name@domain.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
    "ty>=0.0.1a24",
]

[tool.coverage.run]
branch = true
source = ["project_name"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = true

lint.select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
  "D",   # pydocstyle
  "PL",  # pylint-like
  "C90", # mccabe
  "PERF", # performance
  "RUF", # ruff-specific
  "PTH", # pathlib
  "FLY", # f-strings
]

lint.ignore = []

exclude = ["tests/data", ".venv", "build", "dist"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # or "numpy" or "pep257"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
